k8s/growi/mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: growi-mongodb
  name: growi-mongodb
  namespace: growi
spec:
  replicas: 1
  serviceName: growi-mongodb
  selector:
    matchLabels:
      app: growi-mongodb
  template:
    metadata:
      labels:
        app: growi-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: db
              mountPath: /data/db
            - name: configdb
              mountPath: /data/configdb
            - name: secrets
              mountPath: /secrets
            - name: init
              mountPath: /docker-entrypoint-initdb.d/init.sh
              subPath: init.sh
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 500Mi
      volumes:
        - name: secrets
          secret:
            secretName: growi-secrets
        - name: init
          configMap:
            name: mongodb-init
  volumeClaimTemplates:
    - metadata:
        name: db
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 100Gi
    - metadata:
        name: configdb
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: growi-mongodb
  name: growi-mongodb
  namespace: growi
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
  selector:
    app: growi-mongodb
