k8s/growi/growi.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: growi
  name: growi
  namespace: growi
spec:
  replicas: 1
  serviceName: growi
  selector:
    matchLabels:
      app: growi
  template:
    metadata:
      labels:
        app: growi
    spec:
      containers:
        - name: growi
          image: weseek/growi@sha256:c55669054f66e27b98aad8ef5b86255600cab7687d4a4a4b7a89c5d39b117a87
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: growi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: secrets
              mountPath: /secrets
          resources:
            requests:
              cpu: 300m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      volumes:
        - name: secrets
          secret:
            secretName: growi-secrets
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: growi
  name: growi
  namespace: growi
spec:
  ports:
    - name: growi
      port: 3000
      targetPort: growi
  selector:
    app: growi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-growi
  namespace: growi
  annotations:
    nginx.org/redirect-to-https: "True"
    nginx.org/client-max-body-size: "0"
    nginx.org/proxy-request-buffering: "off"
    nginx.org/proxy-connect-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wiki.isec-lab.org
      secretName: letsencrypt-cert
  rules:
    - host: wiki.isec-lab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: growi
                port:
                  name: growi
